--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -242,6 +242,9 @@
  <script src="{% static 'js/main.js' %}"></script>
  <!-- Box icon js -->
  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+ <script src="{% static 'js/jquery.min.js' %}"></script>
+ <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+ <script src="{% static 'js/deposit_validation.js' %}"></script>
 
  <script>
   const el = document.getElementById("id_payment_type");
