set invalid color to red

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -25,6 +25,13 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
+    <style>
+      em.is-invalid {
+        color: #dc3545;
+        /* font-weight: bold; */
+      }
+    </style>
+
 </head>
 <body>
     <!-- Navbar starts here -->
