--- a/investments/templates/investments/buy_investment.html
+++ b/investments/templates/investments/buy_investment.html
@@ -12,7 +12,7 @@
         style="background: linear-gradient(to  right,rgb(102, 204, 102, .4) 10%, rgba(255, 255, 255));">
         <div class="container">
             <section class="row g-5">
-                <article class="col-12 col-md-6 offset-md-1">
+                <article class="col-12 col-md-6">
                     <div class="bg-white shadow-sm p-5 rounded-4">
                         <!-- Forms-->
                         <form action="" method="post" enctype="multipart/form-data" id="payment_form">
