click and copy features

--- a/investments/templates/investments/buy_investment.html
+++ b/investments/templates/investments/buy_investment.html
@@ -8,8 +8,8 @@
     ** Redirect client from this page back to profile
 -->
     <section 
-        class="py-5" 
-        style="background: linear-gradient(to  right,rgb(102, 204, 102, .4) 10%, rgba(255, 255, 255));">
+        id="buy_investment"
+    >
         <div class="container">
             <section class="row g-5">
                 <article class="col-12 col-md-6">
