Css for investments added

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if title %} {{title}} {% else %} RiazVest {% endif %}</title>
-
     <link rel="stylesheet" href="{% static 'css/b5css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/core.css' %}">
+    <link rel="stylesheet" href="{% static 'investments/css/investment.css' %}">
 
     <!-- Icons CSS -->
     <link
