--- a/investments/templates/investments/buy_investment.html
+++ b/investments/templates/investments/buy_investment.html
@@ -105,7 +105,7 @@
                         </div>
                         <span>
                             <h5 class="text-muted">Package Name</h5>
-                            <h4 id="plan_name" style="color: #003366;">{{plan.name}}</h4>
+                            <h4 id="plan_name" style="color: #08c908;">{{plan.name}}</h4>
                             <!-- <p>
                                 {{plan.description|truncatewords:25}}
                             </p> -->
