--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Client Dashboard</h1>
-</body>
-</html>
+{% extends 'users/base.html' %} {% load static %} {% load crispy_forms_tags %}
+
+{% block content %}
+<div class="tab-pane fade show active" id="content-dashboard" role="tabpanel" aria-labelledby="tab-home">
+    <h2>Home Content</h2>
+    <p>This is the content for the Home section.</p>
+  </div>
+{% endblock %}
