--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -2,7 +2,20 @@
 
 {% block content %}
 <div class="tab-pane fade show active" id="content-dashboard" role="tabpanel" aria-labelledby="tab-home">
-    <h2>Home Content</h2>
-    <p>This is the content for the Home section.</p>
-  </div>
+    <section>
+        <div class="container">
+            <section class="row">
+                <div class="col-12 col-md-4">
+                    col 1
+                </div>
+                <div class="col-12 col-md-4">
+                    col 3
+                </div>
+                <div class="col-12 col-md-4">
+                    col 2
+                </div>
+            </section>
+        </div>
+    </section>
+</div>
 {% endblock %}
