base adjusted removed padding

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -57,7 +57,7 @@
           </nav>
     
           <!-- Main Content -->
-          <div class="col-md-9 ms-sm-auto col-lg-10 bg-warning">
+          <div class="col-md-9 ms-sm-auto col-lg-10 bg-warning p-0">
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
@@ -79,7 +79,7 @@
             </nav>
     
             <!-- Main Content Area -->
-            <div class="tab-content " id="sidebarTabsContent">
+            <div class="tab-content p-5" id="sidebarTabsContent">
               {% block content %}
               {% endblock %}
             </div>
