--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -7,7 +7,7 @@
     <title>{% if title %} {{title}} {% else %} RiazVest {% endif %}</title>
     <link rel="stylesheet" href="{% static 'css/b5css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/core.css' %}">
-    <link rel="stylesheet" href="{% static 'investments/css/investment.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/client.css' %}">
 
     <!-- Icons CSS -->
     <link
@@ -17,12 +17,6 @@
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
-    />
-
-    <!-- Link Swiper's CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
     <!-- swiss alert box custom -->
@@ -41,7 +35,7 @@
     <div class="container-fluid">
         <div class="row">
           <!-- Sidebar -->
-          <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+          <nav class="col-md-3 col-lg-2 d-md-block sidebar">
             <div class="position-sticky">
               {% block sidebar %}
               <ul class="nav flex-column nav-pills" id="sidebarTabs" role="tablist">
@@ -57,7 +51,7 @@
           </nav>
     
           <!-- Main Content -->
-          <div class="col-md-9 ms-sm-auto col-lg-10 bg-warning p-0">
+          <div class="col-md-9 ms-sm-auto col-lg-10 p-0">
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
