--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -40,10 +40,95 @@
               {% block sidebar %}
               <ul class="nav flex-column nav-pills" id="sidebarTabs" role="tablist">
                 <li class="nav-item">
-                  <a class="nav-link active" id="tab-home" data-bs-toggle="pill" href="#content-dashboard" role="tab" aria-controls="content-home" aria-selected="true">Home</a>
+                    <a 
+                        class="nav-link active" 
+                        id="tab-home" 
+                        data-bs-toggle="pill" 
+                        href="#content-dashboard" 
+                        role="tab" 
+                        aria-controls="content-home" 
+                        aria-selected="true"
+                    >
+                        Home
+                    </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="tab-profile" data-bs-toggle="pill" href="#content-profile" role="tab" aria-controls="content-profile" aria-selected="false">Profile</a>
+                    <a 
+                        class="nav-link" 
+                        id="tab-investments" 
+                        data-bs-toggle="pill" 
+                        href="#content-investments" 
+                        role="tab" 
+                        aria-controls="content-investments" 
+                        aria-selected="false"
+                    >
+                        Investments
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" 
+                        id="tab-withdrawals" 
+                        data-bs-toggle="pill" 
+                        href="#content-withdrawals" 
+                        role="tab" 
+                        aria-controls="content-withdrawals" 
+                        aria-selected="false"
+                    >
+                        Withdrawals
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" 
+                        id="tab-referrals" 
+                        data-bs-toggle="pill" 
+                        href="#content-referrals" 
+                        role="tab" 
+                        aria-controls="content-referrals" 
+                        aria-selected="false"
+                    >
+                        Referrals
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" 
+                        id="tab-profile" 
+                        data-bs-toggle="pill" 
+                        href="#content-profile" 
+                        role="tab" 
+                        aria-controls="content-profile" 
+                        aria-selected="false"
+                    >
+                        Profile & Settings
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" 
+                        id="tab-faq" 
+                        data-bs-toggle="pill" 
+                        href="#content-faq" 
+                        role="tab" 
+                        aria-controls="content-faq" 
+                        aria-selected="false"
+                    >
+                        FAQ
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" 
+                        id="tab-profile" 
+                        data-bs-toggle="pill" 
+                        href="#content-profile" 
+                        role="tab" 
+                        aria-controls="content-profile" 
+                        aria-selected="false"
+                    >
+                        Logout
+                    </a>
                 </li>
               </ul>
               {% endblock %}
@@ -66,6 +151,12 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
                     </li>
                   </ul>
                 </div>
