added icons to sidebars

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -49,7 +49,8 @@
                         aria-controls="content-home" 
                         aria-selected="true"
                     >
-                        Home
+                        <i class=" bi bi-house-door-fill" style="font-size: 1.2em;"></i>
+                        Dashboard
                     </a>
                 </li>
                 <li class="nav-item">
@@ -62,6 +63,7 @@
                         aria-controls="content-investments" 
                         aria-selected="false"
                     >
+                        <i class=" bi bi-graph-up-arrow"></i>
                         Investments
                     </a>
                 </li>
@@ -75,6 +77,7 @@
                         aria-controls="content-withdrawals" 
                         aria-selected="false"
                     >
+                        <i class=" bi bi-briefcase-fill" style="font-size: 1.2em;"></i>
                         Withdrawals
                     </a>
                 </li>
@@ -88,6 +91,7 @@
                         aria-controls="content-referrals" 
                         aria-selected="false"
                     >
+                        <i class="bi bi-people-fill"></i>
                         Referrals
                     </a>
                 </li>
@@ -101,6 +105,7 @@
                         aria-controls="content-profile" 
                         aria-selected="false"
                     >
+                        <i class="bi bi-person-circle"></i>
                         Profile & Settings
                     </a>
                 </li>
@@ -114,6 +119,7 @@
                         aria-controls="content-faq" 
                         aria-selected="false"
                     >
+                        <i class="bi bi-question-circle-fill"></i>
                         FAQ
                     </a>
                 </li>
