--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -142,16 +142,16 @@
           </nav>
     
           <!-- Main Content -->
-          <div class="col-md-9 ms-sm-auto col-lg-10 p-0">
+          <div class="col-md-9 me-auto col-lg-10 p-0">
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg" style="background: #F5F5F5">
               <div class="container-fluid">
                 <a class="navbar-brand" href="#">Dashboard</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                       <a class="nav-link" href="#">Link 1</a>
                     </li>
