Icons and styling for the dashboard

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -4,15 +4,115 @@
 <div class="tab-pane fade show active" id="content-dashboard" role="tabpanel" aria-labelledby="tab-home">
     <section>
         <div class="container">
-            <section class="row">
+            <section class="row gy-4">
+                <di class="col-12 col-md-4">
+                    <a class="d-flex summary shadow-sm">
+                        <i class="bi bi-graph-up-arrow"></i>
+                        <div class="ps-4">
+                            <p>Total Investment</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
+                </di>
                 <div class="col-12 col-md-4">
-                    col 1
+                    <a href="" class="d-flex summary shadow-sm">
+                        <i class="bi bi-briefcase"></i>
+                        <div class="ps-4">
+                            <p>Active Plans</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-md-4">
-                    col 3
+                    <a href="#" class="d-flex summary shadow-sm">
+                        <i class="bi bi-coin"></i>
+                        <div class="ps-4">
+                            <p>Total Profits</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
                 </div>
+
                 <div class="col-12 col-md-4">
-                    col 2
+                    <a href="#" class="d-flex summary shadow-sm">
+                        <i class="bi bi-people"></i>
+                        <div class="ps-4">
+                            <p>Total Referrals</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <a href="#" class="d-flex summary shadow-sm">
+                        <i class="bi bi-wallet2"></i>
+                        <div class="ps-4">
+                            <p>Withdrawals Amount</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <a href="#" class="d-flex summary shadow-sm">
+                        <i class="bi bi-currency-bitcoin"></i>
+                        <div class="ps-4">
+                            <p>Referrals Earnings</p>
+                            <p><b>15</b></p>
+                        </div>
+                    </a>
+                </div>
+            </section>
+
+            <section class="row pt-5">
+                <div class="col-12 col-md-5">
+                    <div class="p-4 bg-white rounded-2 shadow-lg">
+                        <table class="table">
+                            <tr>
+                                <td>
+                                    Full Name
+                                </td>
+                                <td class="text-end">
+                                    <b>John Doe</b>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    Next Accrual Date
+                                </td>
+                                <td class="text-end">
+                                    <b>05/16/2025</b>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    Next Profit
+                                </td>
+                                <td class="text-end">
+                                    <b><sup>$</sup>120</b>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    Referral Links
+                                </td>
+                                <td class="text-end">
+                                    <a href="" class="btn btn-success">
+                                        copy Referral link
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-7">
+                    <div class="">
+                        <h3>Top Active Investment</h3>
+                    </div>
                 </div>
             </section>
         </div>
