--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -64,7 +64,7 @@
                 </div>
             </section>
 
-            <section class="row pt-5">
+            <section class="row pt-5 g-4">
                 <div class="col-12 col-md-5">
                     <div class="p-4 bg-white rounded-2 shadow-lg">
                         <table class="table">
@@ -111,7 +111,70 @@
 
                 <div class="col-12 col-md-7">
                     <div class="">
-                        <h3>Top Active Investment</h3>
+                        <h3>Active Investment</h3>
+
+                        <div
+                            data-aos="fade-up"
+                            data-aos-delay="100"
+                            class="row border p-4 bg-light"
+                        >
+                            <div class="col-12 col-md-5 col-lg-5">
+                                <img 
+                                    src="{% static '/images/oil_gas.jpg' %}" 
+                                    alt="" 
+                                    class="img-fluid rounded-5"
+                                    style="object-fit: cover; height: 100%; width: 100%;"
+                                >
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-7 p-3">
+                                <table class="table table-borderless" style="background: transparent !important;">
+                                    <tr>
+                                        <td>
+                                            Investment name:
+                                        </td>
+                                        <td class="text-end">
+                                            <span class="fw-bolder text-success">Real Estate</span>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            Invested Amount:
+                                        </td>
+                                        <td class="text-end">
+                                            <b><sup>$</sup>100,000</b>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            Total Profit:
+                                        </td>
+                                        <td class="text-end">
+                                            <b><sup>$</sup>10,000</b>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            Daily Profit:
+                                        </td>
+                                        <td class="text-end">
+                                            <b><sup>$</sup>100</b>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            Next Accrual:
+                                        </td>
+                                        <td class="text-end">
+                                            <b>05/05/2025</b>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                    </div>
                     </div>
                 </div>
             </section>
