readjustment of the active investments

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -64,7 +64,7 @@
                 </div>
             </section>
 
-            <section class="row pt-5 g-4">
+            <section class="row pt-5 g-5">
                 <div class="col-12 col-md-5">
                     <div class="p-4 bg-white rounded-2 shadow-lg">
                         <table class="table">
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="col-12 col-md-7">
-                    <div class="">
+                    <div>
                         <h3>Active Investment</h3>
 
                         <div
