changes made on the investment row

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -116,7 +116,7 @@
                         <div
                             data-aos="fade-up"
                             data-aos-delay="100"
-                            class="row border p-4 bg-light"
+                            class="row m-1 border p-4 bg-light"
                         >
                             <div class="col-12 col-md-5 col-lg-5">
                                 <img 
