--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -7,4 +7,8 @@
 <div class="tab-pane fade" id="content-investment" role="tabpanel" aria-labelledby="tab-investment">
     {% include 'users/investments_tab.html' %}
 </div>
+
+<div class="tab-pane fade" id="content-profile" role="tabpanel" aria-labelledby="tab-profile">
+    {% include 'users/profile_tab.html' %}
+</div>
 {% endblock content %}
