withdrawals section added to page

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -8,6 +8,10 @@
     {% include 'users/investments_tab.html' %}
 </div>
 
+<div class="tab-pane fade" id="content-withdrawals" role="tabpanel" aria-labelledby="tab-withdrawals">
+    {% include 'users/withdrawals_tab.html' %}
+</div>
+
 <div class="tab-pane fade" id="content-profile" role="tabpanel" aria-labelledby="tab-profile">
     {% include 'users/profile_tab.html' %}
 </div>
