urls for base adjusted

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
 {% load static %}
+{% load crispy_forms_tags %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -67,7 +68,7 @@
                         class="nav-link" 
                         id="tab-investments" 
                         data-bs-toggle="pill" 
-                        href="#content-investments" 
+                        href="#content-investment" 
                         role="tab" 
                         aria-controls="content-investments" 
                         aria-selected="false"
