withdrawals and referrals tabs included in the web page

--- a/users/templates/users/client_dashboard.html
+++ b/users/templates/users/client_dashboard.html
@@ -12,6 +12,10 @@
     {% include 'users/withdrawals_tab.html' %}
 </div>
 
+<div class="tab-pane fade" id="content-referrals" role="tabpanel" aria-labelledby="tab-referrals">
+    {% include 'users/referrals_tab.html' %}
+</div>
+
 <div class="tab-pane fade" id="content-profile" role="tabpanel" aria-labelledby="tab-profile">
     {% include 'users/profile_tab.html' %}
 </div>
