investments tab active investment adjusted

--- a/users/templates/users/investments_tab.html
+++ b/users/templates/users/investments_tab.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section class="plan">
+<section class="plan pt-2">
     <div class="container">
         <section class="row">
             <article class="col-12">
